@@ -1,7 +1,7 @@
 [Setup]
 Bits=32
 AppName=Zebedee Secure Tunnel
-AppVerName=Zebedee Secure Tunnel Version 2.3.0
+AppVerName=Zebedee Secure Tunnel Version 2.3.1
 AppCopyright=Copyright 1999, 2000, 2001, 2002 by Neil Winton.
 DefaultDirName={pf}\Zebedee
 DefaultGroupName=Zebedee
